feat: :sparkles: update sitemap; fix grammar; make back-to-top btn smoother; add navbar active on project pages
update sitemap with all projects and remove my-resume page;
remove my-resume pug file;
make back-to-top hover transition smoother, fix grammar page;
center the contact page contents;
add last name to navbar;
fix letter head style;
add navbar active on project pages;
fix capsule being to round;
fix layer-next on mobile pages;
update deps;
remove gulp-sass;
WIP proper image component on project pages

--- a/src/pug/components/banner.pug
+++ b/src/pug/components/banner.pug
@@ -5,7 +5,7 @@ mixin banner(value = {})
   - Object.assign(image, { class: "effect-parallax hero-img" });
 
   .layer.layer-hero-id.banner-mode
-    article.layout-padding-bottom.layout-padding-dull-top
+    article.layout-padding-dull-top
       .layer-hero
         +image(image)
 
@@ -22,5 +22,6 @@ mixin banner(value = {})
                     +icon("expand_more").action-icon.style-font-size-24
                     span.action-btn-section
                       span.action-btn-spacer
+                      span.layout-margin-left-mini
                       span.action-btn-content Scroll Down
                       span.action-btn-spacer
