--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -3,7 +3,7 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-      
+
       url: "/contact",
       name: "contact",
       title: "Contact me — Let's talk. I'm ready to create something awesome, are you?",
@@ -17,52 +17,50 @@ block content
   //- Intro layer
   +layer
     +layout({
-      class: "layout-contain "
+      class: "layout-contain"
     })
       section(class="layout-shorten layout-padding-top-extra-large")
         section.layout-contain-large.style-left(class="layout-flex layout-flex-col--device-lt-tablet layout-align-items-center layout-justify-content-center")
           div
             +head({
-              class: "layout-margin-bottom"
+              class: "style-center"
             })
-              h1.h3.h3.style-font-35--device-phone.style-primary-dark.style-bold.layout-margin-dull Contact
+              h1.h3.h3.style-font-35--device-phone.style-primary-dark.style-bold Contact
+              +link({
+                href: "https://www.linkedin.com/in/o-josephojo/",
+                content: "LinkedIn"
+              })(target="_blank" rel="noopener")
+              span.layout-margin-right= "   "
+              +link({
+                href: "https://github.com/josephojo",
+                content: "Github"
+              })(target="_blank" rel="noopener")
+              span.layout-margin-right= "   "
+              span(itemprop="email")
+                +link({
+                  href: "mailto:laoluojo@gmail.com",
+                  content: "Email"
+                })(target="_blank" rel="noopener")
 
             +main
-              div(class="layout-padding-top-small--device-lt-tablet layout-padding-right-small--device-gt-tablet")
-                span Drop me a message by filling out this contact form and I'll respond back as soon as possible:
-                br
-                +link({
-                    class: "layout-margin-bottom-small style-center action-btn action-btn-expand-scale action-btn-smooth layer-secondary-btn",
-                    href: "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAafqFGVUOFpCU0tIMk8xRTZCTzFFS09ITlEwTlFFRS4u"
-                }, true)(title="View my CV." target="_blank"  rel="noopener")
-                  span.layout-padding-nano
-                  section.action-btn-layout
-                    span.action-btn-group.layout-padding-smaller
-                      +icon("launch").action-icon.style-font-size-24
-                      span.action-btn-section
-                        span.action-btn-spacer
-                        span.action-btn-spacer
-                        span.action-btn-content Contact form
-                        span.action-btn-spacer
+              div(class="style-center")
+                span Drop me a message by filling out this contact form and I'll respond back as soon as possible.
                 br
                 br
-                span="You can find me at: "
-                +link({
-                  href: "https://www.linkedin.com/in/o-josephojo/",
-                  content: "LinkedIn"
-                })(target="_blank" rel="noopener")
-                span= " - "
-                +link({
-                  href: "https://github.com/josephojo",
-                  content: "Github"
-                })(target="_blank" rel="noopener")
-                span= " - "
-                span(itemprop="email")
+                .layout-flex.layout-flex-center
                   +link({
-                    href: "mailto:laoluojo@gmail.com",
-                    content: "Email"
-                  })(target="_blank" rel="noopener")
-                span .  
+                      class: "layout-margin-bottom-small style-center action-btn action-btn-expand-scale action-btn-smooth layer-secondary-btn",
+                      href: "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAafqFGVUOFpCU0tIMk8xRTZCTzFFS09ITlEwTlFFRS4u"
+                  }, true)(title="View my CV." target="_blank"  rel="noopener")
+                    span.layout-padding-nano
+                    section.action-btn-layout
+                      span.action-btn-group.layout-padding-smaller
+                        +icon("launch").action-icon.style-font-size-24
+                        span.action-btn-section
+                          span.action-btn-spacer
+                          span.action-btn-spacer
+                          span.action-btn-content Contact form
+                          span.action-btn-spacer
                 br
               +tile({
                 class: "layer-surface layer-box layout-block layer-tile-outline layer-joseph-img2 layer-shadow--1",
@@ -94,8 +92,8 @@ block content
             input.layout-full-width#name(type='text', name='name', placeholder="" required)
             label(for='name') Name
           fieldset.layer-fieldset.layout-flex.layout-center
-            input#email(type='email', name='email', placeholder="gra" required)
-            label(for='name') Email
+            input#email(type='email', name='email',  required)
+            label(for='email') Email
           fieldset.style-center
             button.action-btn.action-btn-smooth.layer-secondary-btn(type='submit')
               span.layout-padding-nano
@@ -151,5 +149,5 @@ block content
 block footer
   //- class: "",
   +footer({
-    noSocials: false
+    noSocials: true
   })
