--- a/src/pug/pages/projects/publications.pug
+++ b/src/pug/pages/projects/publications.pug
@@ -3,11 +3,11 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-      
+
       url: "/projects/publications",
       name: "publications",
       title: "Academic Publications.",
-      description: "I worked with ... Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt..."
+      description: "A list of publications I completed while studying for my masters at OntarioTech University."
     };
 
 block content
@@ -43,7 +43,7 @@ block content
     class: "layout-contain-large layer-round layout-padding-horz--device-gt-tablet"
   })
     +link({
-      href: "/projects/battery-manager",
+      href: "/projects/boxer",
       class: "layout-block layout-padding-horz-default--device-gt-tablet layer-black layer-next"
     }, true)
       +head({
@@ -51,7 +51,7 @@ block content
       })
         h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
         +main({
-          class: "layout-padding-vert-sub-large--device-gt-tablet"
+          class: "layout-padding-vert-sub-large"
         })
           p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Boxer
 
