--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -3,11 +3,11 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-      
+
       url: "/projects/ultima-apparel",
       name: "ultima-apparel",
       title: "Ultima Apparel — Improving posture and form through data",
-      description: "A project to improve posture and acquire data about workout form."
+      description: "Enhanced sportsware designed to improve posture and track workout form."
     };
 
 block content
@@ -44,7 +44,7 @@ block content
     class: "layout-contain-large layer-round layout-padding-horz--device-gt-tablet"
   })
     +link({
-      href: "/projects/battery-manager",
+      href: "/projects/phoenix",
       class: "layout-block layout-padding-horz-default--device-gt-tablet layer-black layer-next"
     }, true)
       +head({
@@ -52,7 +52,7 @@ block content
       })
         h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
         +main({
-          class: "layout-padding-vert-sub-large--device-gt-tablet"
+          class: "layout-padding-vert-sub-large"
         })
           p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Phoenix
 
