--- a/src/scss/components/action.scss
+++ b/src/scss/components/action.scss
@@ -29,20 +29,23 @@
         }
 
         &-radial {
-            &, &:focus-visible {
-            border-radius: 24px;
+            &,
+            &:focus-visible {
+                border-radius: 24px;
             }
         }
 
         &-round {
-            &, &:focus-visible {
+            &,
+            &:focus-visible {
                 @extend .layer-round;
             }
         }
 
         &-smooth {
-            &, &:focus-visible {
-            border-radius: 5px;
+            &,
+            &:focus-visible {
+                border-radius: 5px;
             }
         }
 
@@ -58,7 +61,9 @@
 
         &-group {
             justify-content: center;
-            display: inline-flex;
+            align-content: center;
+            align-items: center;
+            display: flex;
             width: 100%;
 
             .action-icon {
@@ -75,7 +80,6 @@
             letter-spacing: 0.02857em;
             font-family: $bold-font;
             font-size: 0.875rem;
-            line-height: 24px;
             font-weight: 500;
         }
 
@@ -157,8 +161,9 @@
 
         &-btn,
         &-btn:hover {
-            &, &:focus-visible {
-            border-radius: 20em;
+            &,
+            &:focus-visible {
+                border-radius: 20em;
             }
             text-decoration: none;
         }
