--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -121,8 +121,8 @@ template {
 //     scrollbar-width: thin;
 // }
 
-html, body {
-    
+html,
+body {
     @include applyTheme(background-color, "background");
     @include applyTheme(color, "dark");
 }
@@ -248,7 +248,8 @@ $headerSizes: (4.2rem, 3.56rem, 2.92rem, 2.28rem, 1.64rem, 1rem);
     }
 }
 
-img, video {
+img,
+video {
     object-position: center center;
     object-fit: cover;
     min-height: 200px;
@@ -278,7 +279,8 @@ a {
 
 // For touch screen devices
 a,
-button, input {
+button,
+input {
     -webkit-tap-highlight-color: transparent;
     background-image: none;
     outline: 0;
@@ -429,12 +431,16 @@ main {
     }
 }
 
-a, button,input {
+a,
+button,
+input {
     &:focus-visible {
-    transition: box-shadow ease 0.25s;
+        transition: box-shadow ease 0.25s;
         --tw-ring-offset-shadow: 0 0 0 4px #{transparentize($secondary, 0.5)};
-        --tw-ring-shadow: 0 0 0 calc(4px + var(--tw-ring-offset-width, 0px)) var(--tw-ring-color);
-        box-shadow: var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow, 0 0 #0000);
+        --tw-ring-shadow: 0 0 0 calc(4px + var(--tw-ring-offset-width, 0px))
+            var(--tw-ring-color);
+        box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+            var(--tw-shadow, 0 0 #0000);
         --tw-ring-color: #{transparentize($secondary-light, 0.5)};
         border-radius: 5px;
     }
@@ -474,5 +480,19 @@ a, button,input {
 }
 
 .back-to-top {
+    --color: var(--primary, #{$primary});
     z-index: 500;
+
+    .action-icon {
+        transition: box-shadow ease 0.35s;
+        border-radius: 9999px;
+        box-shadow: 0 0 25px 15px var(--color, $primary);
+    }
+
+    &:hover,
+    &:focus {
+        .action-icon {
+            --color: var(--primary-light, #{#{$primary-light}});
+        }
+    }
 }
