--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -121,8 +121,9 @@
     }
 
     &:not(.banner-mode) &-hero .layer-image {
-        &, &:focus-visible {
-        border-radius: 15px;
+        &,
+        &:focus-visible {
+            border-radius: 15px;
         }
     }
 
@@ -395,7 +396,8 @@
 
         @for $sz from 1 through 20 {
             &-radius-#{$sz} {
-                &, &:focus-visible {  
+                &,
+                &:focus-visible {
                     border-radius: #{$sz}px;
                 }
             }
@@ -408,22 +410,20 @@
     }
 
     &-round {
-        &, &:focus-visible {
-        border-radius: 20em;
+        &,
+        &:focus-visible {
+            border-radius: 20em;
         }
     }
 
-    &-tile {
-        position: relative;
-        min-height: 300px;
+    a .layer-tile {
         cursor: pointer;
-        display: block;
-        width: 100%;
 
         &-outline .layer-image-overlay {
             border: 4px solid transparent;
-            &, &:focus-visible {
-            border-radius: 8px;
+            &,
+            &:focus-visible {
+                border-radius: 8px;
             }
         }
 
@@ -431,6 +431,14 @@
             border-color: $secondary-light;
             border-color: var(--secondary-light, $secondary-light);
         }
+    }
+
+    &-tile {
+        position: relative;
+        min-height: 300px;
+        cursor: help;
+        display: block;
+        width: 100%;
 
         &,
         .layer-image {
@@ -454,8 +462,9 @@
 
         &,
         .layer-image {
-            &, &:focus-visible {
-            border-radius: 8px;
+            &,
+            &:focus-visible {
+                border-radius: 8px;
             }
         }
 
@@ -463,8 +472,9 @@
             &,
             & .layer-image,
             & .layer-image-overlay {
-                &, &:focus-visible {
-                border-radius: 0 !important;
+                &,
+                &:focus-visible {
+                    border-radius: 0 !important;
                 }
             }
         }
@@ -474,8 +484,9 @@
                 &,
                 & .layer-image,
                 & .layer-image-overlay {
-                    &, &:focus-visible {
-                    border-radius: 0 !important;
+                    &,
+                    &:focus-visible {
+                        border-radius: 0 !important;
                     }
                 }
             }
@@ -521,10 +532,12 @@
         background-color: $white;
         background-color: var(--very-light, $white);
         overflow: hidden;
-        border-radius: 24px;
 
-        &:focus-visible {
-            border-radius: 24px;
+        @media #{$screen-size-gt-tablet} {
+            &,
+            &:focus-visible {
+                border-radius: 24px;
+            }
         }
 
         .layer-title,
@@ -533,13 +546,12 @@
             color: var(--tertiary, $primary);
             text-align: center;
         }
-        
+
         @media #{$screen-size-phone} {
-        .layer-content {
-            font-size: 30px;
+            .layer-content {
+                font-size: 30px;
+            }
         }
-            
-    }
 
         @media #{$screen-size-gt-tablet} {
             margin-bottom: $size-extra-large;
@@ -554,7 +566,7 @@
         overflow: hidden;
         z-index: 25;
         position: relative;
-        border-radius: 24px;
+        border-radius: 12px;
 
         &-push {
             padding-top: 12rem;
@@ -613,8 +625,9 @@
             border: 2px solid;
             @include applyTheme(border-color, "mid-dark");
             position: relative;
-            &, &:focus-visible {
-            border-radius: 3px;
+            &,
+            &:focus-visible {
+                border-radius: 3px;
             }
             padding: 0.8em $padding-horz;
             vertical-align: middle;
