--- a/src/scss/components/style.scss
+++ b/src/scss/components/style.scss
@@ -1,175 +1,179 @@
 /* -- Styles (only affect text) -- */
 .style {
-	$styleParent: &;
+    $styleParent: &;
 
-	&, &-font {
-		@each $name, $family in $fonts {
+    &,
+    &-font {
+        @each $name, $family in $fonts {
+            &-#{$name},
+            &-#{$name}-font,
+            &-family-#{$name} {
+                font-family: #{$family};
+            }
+        }
 
-			&-#{$name},
-			&-#{$name}-font,
-			&-family-#{$name} {
-				font-family: #{$family};
-			}
-		}
+        &,
+        &-size {
+            font-size: 14px;
 
-		&,
-		&-size {
-			font-size: 14px;
+            @for $sz from 8 through 50 {
+                &-#{$sz} {
+                    font-size: #{$sz}px;
 
-			@for $sz from 8 through 50 {
-				&-#{$sz} {
-					font-size: #{$sz}px;
+                    @include deviceList(font-size, #{$sz}px);
+                }
+            }
+        }
 
-					@include deviceList(font-size, #{$sz}px);
-				}
-			}
-		}
+        @each $name, $value in $sizes {
+            &-#{$name},
+            &-size-#{$name} {
+                font-size: $value;
 
-		@each $name,
-		$value in $sizes {
+                @include deviceList(font-size, $value);
+            }
+        }
 
-			&-#{$name},
-			&-size-#{$name} {
-				font-size: $value;
+        &,
+        &-weight {
+            font-weight: 400;
 
-				@include deviceList(font-size, $value);
-			}
-		}
+            @for $weight from 1 through 9 {
+                &-#{$weight}00 {
+                    font-weight: #{$weight + "00"};
+                }
+            }
 
-		&,
-		&-weight {
-			font-weight: 400;
+            &-bolder {
+                font-weight: 900;
+            }
 
-			@for $weight from 1 through 9 {
-				&-#{$weight}00 {
-					font-weight: #{$weight + "00"};
-				}
-			}
+            &-bold {
+                font-weight: 700;
+            }
 
-			&-bolder {
-				font-weight: 900;
-			}
+            &-regular {
+                font-weight: 600;
+            }
 
-			&-bold {
-				font-weight: 700;
-			}
+            &-thin {
+                font-weight: 300;
+            }
 
-			&-regular {
-				font-weight: 600;
-			}
+            &-thiner {
+                font-weight: 100;
+            }
+        }
 
-			&-thin {
-				font-weight: 300;
-			}
+        &-italic {
+            font-style: italic;
+        }
 
-			&-thiner {
-				font-weight: 100;
-			}
-		}
+        &-underline {
+            text-decoration: underline;
+        }
+    }
 
-		&-italic {
-			font-style: italic;
-		}
+    &-spaceout,
+    &-letter-spacing {
+        letter-spacing: 3px;
 
-		&-underline {
-			text-decoration: underline;
-		}
-	}
+        &-none {
+            letter-spacing: 0;
+        }
 
-	&-spaceout,
-	&-letter-spacing {
-		letter-spacing: 3px;
+        &-small {
+            letter-spacing: 1px;
+        }
 
-		&-none {
-			letter-spacing: 0;
-		}
+        &-double {
+            letter-spacing: 2px;
+        }
 
-		&-small {
-			letter-spacing: 1px;
-		}
+        &-large {
+            letter-spacing: 7px;
+        }
+    }
 
-		&-double {
-			letter-spacing: 2px;
-		}
+    &-line-height {
+        line-height: 1.5em;
 
-		&-large {
-			letter-spacing: 7px;
-		}
-	}
+        &-none {
+            line-height: 0;
+        }
 
-	&-line-height {
-		line-height: 1.5em;
+        &-small {
+            line-height: 1em;
+        }
 
-		&-none {
-			line-height: 0;
-		}
+        &-spaced {
+            line-height: 1.75em;
+        }
 
-		&-small {
-			line-height: 1em;
-		}
+        &-double {
+            line-height: 2em;
+        }
 
-		&-spaced {
-			line-height: 1.75em;
-		}
+        &-large {
+            line-height: 3em;
+        }
+    }
 
-		&-double {
-			line-height: 2em;
-		}
+    &,
+    &-align {
+        &-left {
+            text-align: left;
+        }
 
-		&-large {
-			line-height: 3em;
-		}
-	}
+        &-center {
+            text-align: center;
+        }
 
-	&,
-	&-align {
-		&-left {
-			text-align: left;
-		}
+        &-right {
+            text-align: right;
+        }
 
-		&-center {
-			text-align: center;
-		}
+        &-justify {
+            text-align: justify;
+            text-justify: inter-word;
+        }
+    }
 
-		&-right {
-			text-align: right;
-		}
+    &,
+    &-transform {
+        &-capital {
+            text-transform: capitalize;
+        }
 
-		&-justify {
-			text-align: justify;
-			text-justify: inter-word;
-		}
-	}
+        &-uppercase {
+            text-transform: uppercase;
+        }
 
-	&,
-	&-transform {
-		&-capital {
-			text-transform: capitalize;
-		}
-
-		&-uppercase {
-			text-transform: uppercase;
-		}
-
-		&-lowercase {
-			text-transform: lowercase;
-		}
-	}
+        &-lowercase {
+            text-transform: lowercase;
+        }
+    }
 
     &-letter-head {
-		letter-spacing: 2.54px;
+        font-family: $title-font;
+        letter-spacing: 2.54px;
         line-height: 1.62rem;
         font-size: 5.15rem;
         font-weight: 900;
         margin: 0;
-		padding-top: 1.25rem;
-		padding-bottom: 2px;
+        padding-top: 1.25rem;
+        padding-bottom: 2px;
+        display: inline-block;
+        padding-right: 6px;
+        float: left;
 
-        @media #{$screen-size-phone} {
-            line-height: 3.80rem;
-            font-size: 4.85rem;
-        }
+        // span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
+
+        // @media #{$screen-size-phone} {
+        //     line-height: 3.80rem;
+        //     font-size: 4.85rem;
+        // }
     }
 
-	@include colorList;
+    @include colorList;
 }
